# lokai-project

./: .env.example  .eslintrc.cjs  .gitignore  .prettierignore  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  tsconfig.json
agent/: README.md  environment.yml  pyproject.toml
agent/src/iara_agent/: __init__.py  config.py  main.py
agent/src/iara_agent/database/: __init__.py  neo4j.py  postgres.py  qdrant.py
agent/src/iara_agent/graph/: __init__.py  graph.py
agent/src/iara_agent/graph/nodes/: __init__.py  action_executor.py  action_planner.py  clarification_check.py  context_gatherer.py  intent_classifier.py  learning_phase.py  permission_checker.py  response_generator.py
agent/src/iara_agent/learning/: __init__.py  knowledge_graph.py  pattern_detector.py  suggestion_engine.py
agent/src/iara_agent/llm/: __init__.py  ollama_client.py  openai_client.py  router.py
agent/src/iara_agent/prompts/: __init__.py  planning.py  system.py
agent/src/iara_agent/tools/: __init__.py  base.py
agent/src/iara_agent/tools/filesystem/: __init__.py  delete.py  list.py  read.py  write.py
agent/src/iara_agent/utils/: __init__.py  validators.py
agent/src/lokai_agent/: __init__.py  config.py  main.py
agent/src/lokai_agent/database/: __init__.py  neo4j.py  postgres.py  qdrant.py
agent/src/lokai_agent/graph/: __init__.py  graph.py  state.py
agent/src/lokai_agent/graph/nodes/: __init__.py  action_executor.py  action_planner.py  clarification_check.py  context_gatherer.py  intent_classifier.py  learning_phase.py  permission_checker.py  response_generator.py
agent/src/lokai_agent/learning/: __init__.py  knowledge_graph.py  suggestion_engine.py
agent/src/lokai_agent/llm/: __init__.py  ollama_client.py  openai_client.py  router.py
agent/src/lokai_agent/prompts/: __init__.py  intent.py  pattern.py  system.py
agent/src/lokai_agent/tools/: __init__.py  base.py
agent/src/lokai_agent/tools/filesystem/: __init__.py  delete.py  list.py  read.py  write.py
agent/src/lokai_agent/utils/: __init__.py  sanitizer.py
apps/desktop/: electron-builder.yml  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
apps/desktop/resources/: init.sql
apps/desktop/resources/migrations/: 001_initial.sql
docs/: 01-IARA-Project-Proposal.docx  02-IARA-Technical-Architecture.docx  03-IARA-Technology-Stack.docx  04-IARA-Implementation-Roadmap.docx  05-IARA-Self-Learning-AI-Agents.docx  06-IARA-Security-Testing-Operations.docx
scripts/: build.sh  dev.sh  setup.sh
(+29 files in other folders)
