[project]
name = "iara-agent"
version = "0.1.0"
description = "IARA - Intelligent Adaptive Runtime Assistant - Python AI Agent"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain>=0.1.9",
    "langchain-community>=0.0.24",
    "langchain-core>=0.1.27",
    "langgraph>=0.0.26",
    "httpx>=0.26.0",
    "asyncpg>=0.30.0",
    "qdrant-client>=1.7.3",
    "neo4j>=5.17.0",
    "pydantic>=2.6.1",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.1",
    "structlog>=24.1.0",
    "orjson>=3.9.13",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.4",
    "pytest-cov>=4.1.0",
    "black>=24.1.1",
    "ruff>=0.2.1",
    "mypy>=1.8.0",
    "types-orjson>=3.6.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/iara_agent"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
